<resources>
    <string name="app_name">TrendingNews</string>

    <string name="str_newsstand_menu">Newsstand</string>
    <string name="str_all_news">All News</string>
    <string name="str_favorites_menu">Favorites</string>
    <string name="str_aboutus_menu">About Us</string>

    <string name="str_signout_menu">SignOut</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="str_news_image_thumbnail">News Thumbnail Image</string>
    <string name="str_full_coverage">Full Coverage</string>

    <string name="str_description">Description: </string>
    <string name="str_author">Author: </string>
    <string name="str_published_at">Published At: </string>
    <string name="str_content">Content: </string>
    <string name="str_url">URL: </string>

    <string name="str_url_unavailable">URL is unavailable</string>
    <string name="str_send_to">Send To</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="aboutus">Get Headlines!!!! Know whats happening around you</string>
    <string name="poweredby">Powered By: NewsAPI.org</string>

    <string name="str_news_liked">News Liked</string>
    <string name="str_news_disliked">News Disliked</string>

    <string name="str_unable_share">Unable to share</string>

    <string name="str_fab_share">Share</string>
    <string name="str_fab_launch">Launch</string>
    <string name="str_fab_favorite">Favorite</string>
    <string name="str_fab">Floating Action Button</string>

</resources>
