<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/str_newsstand_menu">
        <menu>
            <group android:checkableBehavior="single">

                <item android:title="@string/str_all_news"
                    android:icon="@drawable/ic_newsstand"
                    android:id="@+id/menu_all_news" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item android:title="@string/str_favorites_menu"
            android:id="@+id/menu_favorites"
            android:icon="@drawable/ic_favorites"/>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/str_aboutus_menu"
            android:id="@+id/menu_about_us"
            android:icon="@drawable/ic_bookmark"/>
    </group>
</menu>