<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_aboutus_menu"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/md_keylines"
            android:textColor="?attr/colorPrimary"/>

        <TextView
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="@dimen/article_titles"
            android:layout_margin="@dimen/md_keylines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Get Headlines"
            android:text="@string/aboutus"/>


        <TextView
            android:layout_gravity="center"
            android:textColor="?attr/colorPrimary"
            android:layout_margin="@dimen/md_keylines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Powered By"
            android:text="@string/poweredby"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
