<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="news"
            type="com.example.anuja.trendingnewsapp.model.Articles" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.activities.NewsDetailsActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:id="@+id/iv_news_img"
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    android:contentDescription="@string/app_name"
                    app:newsImage="@{news.urlToImage}"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.9"/>

                <FrameLayout
                    android:id="@+id/framelayout_title"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.3">

                    <LinearLayout
                        android:id="@+id/linearlayout_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_title_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="bottom|center"
                            android:maxLines="2"
                            android:text="@={news.title}"
                            android:paddingStart="2dp"
                            android:paddingEnd="2dp"
                            tools:text="News Title"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                    </LinearLayout>
                </FrameLayout>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_marginTop="12dp"
            app:behavior_overlapTop="30dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="8dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/colorPrimaryText"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/str_author"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_author_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"
                        android:text="@={news.author}"
                        tools:text="This is the author"
                        android:textSize="16sp"
                        android:layout_marginBottom="2dp"/>

                    <TextView
                        android:textColor="@color/colorPrimaryText"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/str_published_at"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_published_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"
                        android:text="@={news.publishedAt}"
                        tools:text="This is the published at"
                        android:textSize="16sp"
                        android:layout_marginBottom="2dp"/>

                    <TextView
                        android:textColor="@color/colorPrimaryText"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/str_description"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_description_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"
                        android:text="@={news.description}"
                        tools:text="This is the description"
                        android:textSize="16sp"
                        android:layout_marginBottom="2dp"/>

                    <TextView
                        android:textColor="@color/colorPrimaryText"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/str_content"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_content_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"
                        android:text="@={news.content}"
                        tools:text="This is the content"
                        android:textSize="16sp"
                        android:layout_marginBottom="2dp"/>

                    <TextView
                        android:textColor="@color/colorPrimaryText"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/str_url"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_url_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"
                        android:text="@={news.url}"
                        tools:text="This is the url"
                        android:textSize="16sp"
                        android:layout_marginBottom="2dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </android.support.v4.widget.NestedScrollView>

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_anchor="@id/framelayout_title"
            android:id="@+id/toolbar_details"
            app:theme="@style/ThemeOverlay.AppCompat.Dark">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="32dp"
                    android:layout_height="32dp" />

                <TextView
                    android:id="@+id/tv_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    tools:text="Tool bar text"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <!-- floating action bar -->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            app:backgroundTint="#E040FB"
            app:elevation="6dp"
            android:contentDescription="@string/str_fab_share"
            android:visibility="invisible"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/ic_share_selected" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="140dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            app:backgroundTint="#689f38"
            app:elevation="6dp"
            android:contentDescription="@string/str_fab_launch"
            android:visibility="invisible"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/ic_launch_selected" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            app:backgroundTint="#f48fb1"
            app:elevation="6dp"
            android:contentDescription="@string/str_fab_favorite"
            android:visibility="invisible"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/ic_fav_unselected" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:elevation="6dp"
            android:contentDescription="@string/str_fab"
            app:backgroundTint="@color/colorAccent"
            app:pressedTranslationZ="12dp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_add" />
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>
</layout>